[metadata]
name = github-ssh-key
version = attr: github_ssh_key.__version__
author = A.A Suvorov
author_email = smartlegiondev@gmail.com
description = GitHub ssh key manager. Console utility for creating, getting, testing, using public ssh keys for GitHub.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/smartlegionlab/github-ssh-key/
project_urls =
    Documentation = https://github.com/smartlegionlab/github-ssh-keyn/blob/master/README.md
    Release notes = https://github.com/smartlegionlab/github-ssh-key/releases
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords =
    github
    github ssh
    github ssh create key
    github ssh test key
    github clone with ssh
    smart legion
    smart legion lab

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    click~=8.0.1
    smartcliapp~=0.4.0

[options.entry_points]
console_scripts =
    github-ssh-key = github_ssh_key.app:cli

[coverage:run]
omit =
    venv/*
    .pytest_cache
    *__init__.py